--- a/package.json
+++ b/package.json
@@ -41,4 +41,8 @@
   "engines": {
     "node": ">=18.0"
   }
+  "scripts": {
+    "build": "docusaurus build",
+    "test": "echo \"No tests yet\" && exit 0"
+  }
 }
