--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "prism-react-renderer": "^2.3.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "remark-math": "6.0.0",
-    "rehype-katex": "7.0.0"
+    "rehype-katex": "^7.0.0",
+    "remark-math": "^6.0.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
